fix: prevent overflow from long page titles

--- a/src/style.css
+++ b/src/style.css
@@ -31,20 +31,50 @@
     --font-size: 14px;
     --font-size-small: 12px;
   }
-
-  dialog:focus-visible {
-    outline: none;
-  }
-
-  label [data-hidden] + input {
-    margin-top: 0;
-  }
 }
 
+/* TODO: Move to Fine */
+dialog:focus-visible {
+  outline: none;
+}
+
+/* TODO: Move to Fine */
+label [data-hidden] + input {
+  margin-top: 0;
+}
+
+/* TODO: Move to Fine */
 nav a:has(svg) {
   align-items: center;
   display: flex;
   gap: 0.375rem;
+}
+
+/* TODO: Move to Fine */
+:not([data-svg="false"]) svg {
+  flex: none;
+}
+
+/* TODO: Move to Fine */
+nav li hr {
+  margin: 0.5rem 0;
+}
+
+/* TODO: Move to Fine */
+[data-clamp] {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: var(--clamp, 1);
+  overflow: hidden;
+}
+[data-clamp="1"] {
+  --clamp: 1;
+}
+[data-clamp="2"] {
+  --clamp: 2;
+}
+[data-clamp="3"] {
+  --clamp: 3;
 }
 
 nav a[data-active="true"] {
@@ -54,8 +84,4 @@ nav a[data-active="true"] {
 
 nav a {
   text-decoration: none;
-}
-
-nav li hr {
-  margin: 0.5rem 0;
 }
